--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -137,8 +137,9 @@
 }
 
 .catalog-item-button {
-  width: 280px;
-  height: 40px;
+  display: block;
+  text-decoration: none;
+  padding: 10px 109px;
   margin-top: 13px;
   font-size: 16px;
   line-height: 20px;
@@ -152,15 +153,14 @@
   }
 
   @media (min-width: @tablet-width) {
-    width: 248px;
-    height: 39px;
+    padding: 10px 93px;
     margin-top: 33px;
     margin-left: 3px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 168px;
-    height: 40px;
+    padding: 10px 55px;
+    margin-right: 10px;
   }
 }
 
