--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -19,6 +19,16 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    width: 150px;
+  }
+}
+
+.social__item {
+  @media (min-width: @tablet-width) {
+    margin-left: 22px;
+  }
 }
 
 .icon-vkontakte {
