--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -117,7 +117,7 @@
 }
 
 .main-navigation__list {
-  width: 100vw;
+  width: 320px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
