--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -1,4 +1,6 @@
 .presentation {
+  width: 320px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background:
@@ -11,12 +13,14 @@
   }
 
   @media (min-width: @tablet-width) {
+    width: 768px;
     position: relative;
     padding: 0;
     background: none;
   }
 
   @media (min-width: @desktop-width) {
+    width: 1440px;
     padding: 0 110px;
   }
 }
@@ -268,7 +272,9 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 73px;
+    margin-top: 76px;
+    padding-bottom: 0;
+    margin-bottom: 25px;
     width: 467px;
   }
 }
