--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -173,6 +173,10 @@
   &:disabled {
     outline: 2px solid @special-dark-grey;
   }
+
+  &:invalid {
+    outline: 2px solid @status-error;
+  }
 }
 
 .form__option-field:disabled + .icon_email {
