--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -24,6 +24,7 @@
 @radio-hover: #BABABA;
 @radio-disabled: rgba(186, 186, 186, 0.3);
 @radio-disabledtwo: rgba(34, 34, 34, 0.3);
+@status-error: #FF8282;
 
 // Viewports
 
