--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -116,6 +116,10 @@
   display: none;
 }
 
+.main-navigation--nojs .main-navigation__list {
+  display: block;
+}
+
 .main-navigation__list {
   width: 320px;
   display: flex;
