--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -212,9 +212,12 @@
   padding-top: 186px;
   padding-bottom: 43px;
   background: url("../img/gift-background.png") no-repeat;
+  background-color: @basic-green;
 
   @media (min-resolution: 2dppx) {
     background: url("../img/gift-background@2x.png") no-repeat;
+    background-color: @basic-green;
+    background-size: 280px;
   }
 
   @media (min-width: @tablet-width) {
@@ -227,6 +230,7 @@
 
     @media (min-resolution: 2dppx) {
       background: url("../img/gift-photo-tablet@2x.jpg") no-repeat;
+      background-size: 708px;
     }
   }
 
@@ -238,6 +242,7 @@
 
     @media (min-resolution: 2dppx) {
       background: url("../img/gift-photo-desktop@2x.jpg") no-repeat;
+      background-size: 245px;
     }
   }
 }
