--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -1,26 +1,22 @@
 .presentation {
-  width: 320px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background:
     url("../img/presentation-background.jpg") no-repeat,
     linear-gradient(to bottom, @basic-green 28%, @basic-white 28% 100%);
-  background-size: contain;
 
   @media (min-resolution: 2dppx) {
     background: url("../img/presentation-background@2x.jpg") no-repeat;
+    background-size: 320px;
   }
 
   @media (min-width: @tablet-width) {
-    width: 768px;
     position: relative;
     padding: 0;
     background: none;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1440px;
     padding: 0 110px;
   }
 }
