финальная правка финал

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -51,11 +51,11 @@
   }
 }
 
-.catalog-link {
+.catalog__link {
   text-decoration: none;
 }
 
-.catalog-item-title {
+.catalog__item-title {
   margin: 0;
   width: 76px;
   position: absolute;
@@ -81,7 +81,7 @@
   }
 }
 
-.catalog-item-image {
+.catalog__item-image {
   margin: 0;
   width: 140px;
   height: 112px;
@@ -100,7 +100,7 @@
   }
 }
 
-.catalog-item-table {
+.catalog__item-table {
   border-collapse: collapse;
   width: 142px;
   position: absolute;
@@ -123,8 +123,8 @@
   }
 }
 
-.table-cell-one,
-.table-cell-two {
+.catalog__cell-one,
+.catalog__cell-two {
   @media (min-width: @tablet-width) {
     padding-top: 5px;
     padding-bottom: 9px;
@@ -132,11 +132,11 @@
   }
 }
 
-.table-cell-two {
+.catalog__cell-two {
   text-align: right;
 }
 
-.catalog-item-button {
+.catalog__item-button {
   display: block;
   text-decoration: none;
   padding: 10px 109px;
@@ -220,7 +220,7 @@
   }
 }
 
-.plus-text {
+.catalog__plus-text {
   width: 221px;
   margin: 8px auto 0;
   font-size: 12px;
@@ -235,7 +235,7 @@
   }
 }
 
-.plus-button {
+.catalog__plus-button {
   display: block;
   margin-top: 21px;
   padding: 10px 94px;
