--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -7,7 +7,7 @@
   }
 }
 
-.button-text {
+.copyright__button-text {
   font-size: 16px;
   line-height: normal;
   color: @special-dark-grey;
@@ -30,12 +30,7 @@
   }
 }
 
-.button-icon-wrapper {
-  width: 27px;
-  height: 34px;
-}
-
-.button-icon {
+.copyright__button-icon {
   color: @special-grey2;
 
   &:hover {
