--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -159,7 +159,7 @@
   }
 }
 
-.cost-number {
+.example__cost-number {
   @media (min-width: @tablet-width) {
     line-height: 40px;
   }
@@ -192,7 +192,7 @@
   }
 }
 
-.example__slider__image {
+.example__slider-image {
   margin-bottom: 33px;
 
   @media (min-width: @tablet-width) {
@@ -207,7 +207,7 @@
   }
 }
 
-.example__slider__wrapper {
+.example__slider-wrapper {
   @media (min-width: @desktop-width) {
     width: 576px;
     margin-top: 563px;
@@ -215,7 +215,7 @@
   }
 }
 
-.slider-before {
+.example__slider-before {
   margin-left: 63px;
 
   @media (min-width: @tablet-width) {
@@ -227,7 +227,7 @@
   }
 }
 
-.slider-after {
+.example__slider-after {
   margin: 0 0 0 13px;
 
   @media (min-width: @tablet-width) {
@@ -235,8 +235,8 @@
   }
 }
 
-.slider-before,
-.slider-after {
+.example__slider-before,
+.example__slider-after {
   cursor: pointer;
 
   @media (min-width: @tablet-width) {
@@ -252,7 +252,7 @@
   }
 }
 
-.slider-line {
+.example__slider-line {
   display: inline-block;
   width: 84px;
   height: 14px;
@@ -267,7 +267,7 @@
   }
 }
 
-.slider-range {
+.example__slider-range {
   margin: 3px 0 0 6px;
   width: 35px;
   height: 6px;
@@ -275,7 +275,7 @@
   border-radius: 6px;
 }
 
-.slider-scale {
+.example__slider-scale {
   @media (max-width: @mobile-width-only) {
     display: none;
   }
@@ -296,7 +296,7 @@
   }
 }
 
-.slider-toggle {
+.example__slider-toggle {
   position: absolute;
   top: -10px;
   left: 46%;
