--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -77,7 +77,7 @@
   }
 }
 
-.extra-list-item {
+.extra__list-item {
   padding-top: 13px;
   padding-bottom: 17px;
   border-top: 1px solid @special-border-grey;
@@ -115,11 +115,11 @@
   }
 }
 
-.extra-link {
+.extra__link {
   text-decoration: none;
 }
 
-.extra-item-title {
+.extra__item-title {
   width: 130px;
   margin: 0;
   font-size: 16px;
@@ -139,7 +139,7 @@
   }
 }
 
-.extra-item-quantity {
+.extra__item-quantity {
   display: inline-block;
   margin-top: 10px;
   margin-right: 90px;
@@ -160,7 +160,7 @@
   }
 }
 
-.extra-item-price {
+.extra__item-price {
   display: inline-block;
   margin-top: 10px;
   width: 60px;
@@ -179,7 +179,7 @@
   }
 }
 
-.extra-item-button {
+.extra__item-button {
   width: 280px;
   height: 40px;
   margin-top: 15px;
@@ -247,7 +247,7 @@
   }
 }
 
-.gift-text {
+.extra__gift-text {
   width: 161px;
   margin: auto;
   text-align: center;
