--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -179,7 +179,7 @@
   }
 }
 
-.form__option-field:disabled + .icon_email {
+.form__option-field:disabled + .form__icon-email {
   color: @basic-green;
 }
 
@@ -363,7 +363,7 @@
   }
 }
 
-.contacts-wrapper {
+.form__contacts-wrapper {
   @media (min-width: @desktop-width) {
     display: flex;
     flex-direction: row;
@@ -383,7 +383,7 @@
   }
 }
 
-.icon_email {
+.form__icon-email {
   position: absolute;
   color: @special-dark-greytwo;
   top: 16px;
@@ -394,7 +394,7 @@
   }
 }
 
-.icon_phone {
+.form__icon-phone {
   position: absolute;
   top: 13px;
   right: 13px;
@@ -560,7 +560,7 @@
   }
 }
 
-.additionally-wrapper {
+.form__additionally-wrapper {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
