--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -24,7 +24,7 @@
   }
 }
 
-.page-footer__logo {
+.page-footer__logo-wrapper {
   width: 128px;
   display: block;
   margin: auto;
@@ -34,7 +34,7 @@
   }
 }
 
-.footer-logo {
+.page-footer__logo {
   &:hover {
     opacity: 0.8;
   }
