--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -31,30 +31,30 @@
   }
 }
 
-.icon-vkontakte {
+.social__icon-vkontakte {
   @media (min-width: @tablet-width) {
     width: 30px;
     height: 22px;
   }
 }
 
-.icon-instagram {
+.social__icon-instagram {
   @media (min-width: @tablet-width) {
     width: 23px;
     height: 23px;
   }
 }
 
-.icon-facebook {
+.social__icon-facebook {
   @media (min-width: @tablet-width) {
     width: 28px;
     height: 33px;
   }
 }
 
-.icon-vkontakte,
-.icon-instagram,
-.icon-facebook {
+.social__icon-vkontakte,
+.social__icon-instagram,
+.social__icon-facebook {
   color: @special-grey2;
 
   &:hover {
