--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -119,7 +119,7 @@
   }
 }
 
-.features__icon-one {
+.features__text--icon-one {
   &::before {
     content: "";
     position: absolute;
@@ -141,7 +141,7 @@
   }
 }
 
-.features__icon-two {
+.features__text--icon-two {
   &::before {
     content: "";
     position: absolute;
@@ -162,7 +162,7 @@
   }
 }
 
-.features__icon-three {
+.features__text--icon-three {
   &::before {
     content: "";
     position: absolute;
@@ -183,7 +183,7 @@
   }
 }
 
-.features__icon-four {
+.features__text--icon-four {
   &::before {
     content: "";
     position: absolute;
